# app

./: .dev.env  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.docs.yaml  docker-compose.prod.yaml  env.example  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
.ci/tests/: test_docker.sh
.github/workflows/: _perform_format.yaml  _perform_lint.yaml  _perform_pre_commit.yaml  _perform_test.yaml  ci.yaml  publish.yaml  release.yaml  test_results.yaml
docker/django/scripts/: celery_dev  migrate  start_asgi  start_dev  start_wsgi  worker
docker/django/supervisor/: celery.conf
docker/docs/: Dockerfile
docs/: Makefile  make.bat
docs/source/: conf.py  howto.rst  index.rst  users.rst
src/: manage.py
src/config/: __init__.py  _compact.py  api_router.py  asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: __init__.py  _base.py  _logger.py  development.py  production.py  quality.py  test.py
src/themoneyapp/: __init__.py  apps.py  celery_beat.py  conftest.py  urls.py
src/themoneyapp/core/: __init__.py  datetime.py  jsonlib.py  logger.py  typing.py  views.py
src/themoneyapp/static/themoneyapp/css/: style.css
src/themoneyapp/static/themoneyapp/js/: auth.js  dark-mode.js  project.js  sidebar.js  vendors.js
src/themoneyapp/templates/: 403.html  404.html  500.html
src/themoneyapp/templates/_components/: alert.html
src/themoneyapp/templates/_layouts/: action_main.html  base.html  dashboard.html  main.html
src/themoneyapp/templates/_partials/: dashboard_footer.html  dashboard_navbar.html  main_footer.html  main_navbar.html
src/themoneyapp/templates/account/: base_manage_email.html  base_manage_password.html  password_reset_from_key_done.html
src/themoneyapp/templates/admin/: base_site.html
src/themoneyapp/templates/allauth/elements/: alert.html  button.html  field.html  fields.html  form.html  h1.html  h2.html  p.html  panel.html  table.html
src/themoneyapp/templates/allauth/layouts/: base.html  entrance.html  manage.html
src/themoneyapp/templates/themoneyapp/: _base.html  index.html
src/themoneyapp/templates/themoneyapp_users/: user_detail.html  user_form.html
src/themoneyapp/users/: __init__.py  adapters.py  admin.py  apps.py  context_processors.py  forms.py  managers.py  models.py  signals.py  tasks.py  urls.py  views.py
src/themoneyapp/users/api/: __init__.py  serializers.py  views.py
src/themoneyapp/users/migrations/: 0001_initial.py
src/themoneyapp/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_swagger.py  test_tasks.py  test_urls.py  test_views.py
webpack/: common.config.js  dev.config.js  prod.config.js
